--- a/horarioProfessor.html
+++ b/horarioProfessor.html
@@ -211,10 +211,9 @@
                 <input type="number" id="edit-minutes" class="edit-input" min="0" max="59">
                 <label for="edit-type">Tipo da Aula:</label>
                 <select id="edit-type" class="edit-input">
-                    <option>Aula Teórica</option>
-                    <option>Aula Prática</option>
+                    <option>Aulas Normais</option>
                     <option>Prova</option>
-                    <option>Evento Escolar</option>
+                    <option>Atividades Especiais</option>
                 </select>
                 <button type="button" class="btn-save" onclick="saveEdit()">Salvar</button>
                 <button type="button" class="btn" onclick="closeEditModal()">Fechar</button>
