--- a/horarioAluno.html
+++ b/horarioAluno.html
@@ -202,7 +202,7 @@
                     
                     if (aulaDia.tipo === "Atividades Especiais") {
                         celula.classList.add("especial");
-                    } else if (aulaDia.tipo === "prova") {
+                    } else if (aulaDia.tipo === "Prova") {
                         celula.classList.add("prova");
                     } else {
                         celula.classList.add("normal");
