--- a/horarioProfessor.html
+++ b/horarioProfessor.html
@@ -174,9 +174,9 @@
         </table>
 
         <div class="message-box">
-            <h3>Mensagem Automática</h3>
+            <h3>Emails Automáticos</h3>
             <textarea id="automaticMessage" rows="4" style="width: 100%;" placeholder="Digite sua mensagem automática aqui..."></textarea>
-            <button class="btn-message" onclick="sendMessage()">Enviar Mensagem Automática</button>
+            <button class="btn-message" onclick="sendMessage()">Enviar emails</button>
         </div>
 
         <div class="email-box">
