--- a/horarioProfessor.html
+++ b/horarioProfessor.html
@@ -3,158 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Horários Escolares</title> 
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #e3f2fd; /* Azul bebê pastel */
-            color: #333;
-        }
-        header {
-            background: #a3cde7; /* Cinza puxado para azul pastel */
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-            position: relative;
-        }
-        header .btn-logoff {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            background-color: #ff6f61; /* Laranja-avermelhado para chamar atenção */
-            color: white;
-            padding: 5px 10px;
-            border: none;
-            cursor: pointer;
-            font-size: 14px;
-            border-radius: 4px;
-        }
-        header .btn-logoff:hover {
-            background-color: #e55b4d; /* Laranja-avermelhado mais escuro */
-        }
-        .container {
-            width: 80%;
-            margin: auto;
-            overflow: hidden;
-        }
-        .main-container {
-            width: 100%;
-            margin: auto;
-            padding: 20px;
-            background: #f0f8ff; /* Azul bebê pastel */
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-bottom: 20px;
-        }
-        table, th, td {
-            border: 1px solid #a3cde7; /* Cinza puxado para azul pastel */
-        }
-        th, td {
-            padding: 10px;
-            text-align: center;
-        }
-        th {
-            background-color: #87cefa; /* Azul bebê pastel */
-            color: white;
-        }
-        .btn-save {
-            background-color: #87cefa; /* Azul bebê pastel */
-            color: white;
-            padding: 5px 10px;
-            border: none;
-            cursor: pointer;
-            font-size: 14px;
-        }
-        .btn-save:hover {
-            background-color: #4682b4; /* Azul mais escuro */
-        }
-        .btn-email, .btn-message {
-            background-color: #a3cde7; /* Azul bebê pastel */
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            cursor: pointer;
-            font-size: 16px;
-            margin-right: 10px;
-        }
-        .btn-email:hover, .btn-message:hover {
-            background-color: #4682b4; /* Azul mais escuro */
-        }
-        .edit-input, select, input[type="text"], input[type="number"], input[type="email"] {
-            width: 100%;
-            box-sizing: border-box;
-            padding: 8px;
-            background-color: #f0f8ff; /* Azul bebê pastel */
-            border: 1px solid #b0c4de; /* Cinza puxado para azul pastel */
-            border-radius: 4px;
-        }
-        .message-box, .email-box {
-            margin: 20px 0;
-            padding: 10px;
-            border: 1px solid #b0c4de; /* Cinza puxado para azul pastel */
-            background-color: #f0f8ff; /* Azul bebê pastel */
-        }
-        .modal {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.5);
-            justify-content: center;
-            align-items: center;
-        }
-        .modal-content {
-            background: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            width: 50%;
-        }
-        .modal-content label {
-            display: block;
-            margin-bottom: 8px;
-        }
-        .modal-content input, .modal-content select {
-            margin-bottom: 10px;
-        }
-        .modal-content .btn {
-            margin-top: 10px;
-        }
-        .saving-animation {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: rgba(192, 192, 192, 0.8); /* Fundo cinza transparente */
-            color: #2c3e50;
-            padding: 20px;
-            border-radius: 12px;
-            text-align: center;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-            z-index: 1000;
-            font-size: 18px;
-        }
-        .saving-animation i {
-            font-size: 24px;
-            color: #27ae60; /* Verde para o check-in */
-            margin-bottom: 10px;
-        }
-    </style>
+    <title>Horários Escolares</title>
+    <link rel="stylesheet" href="/styles/styprofessor.css">
+    
 </head>
 <body>
     <header>
         <h1>Horários Escolares</h1>
         <button class="btn-logoff" onclick="goBack()">Voltar</button>
     </header>
-
     <div class="container main-container">
         <h2>Horário da Semana</h2>
         <table>
