--- a/horarioAluno.html
+++ b/horarioAluno.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Horário das Aulas</title>
     <!-- Funcionou desse jeito-->
-    <link rel="stylesheet" href="styles/styaluno.css">
+    <link rel="stylesheet" href="/styles/styaluno.css">
 </head>
 <body>
     <header>
