--- a/horarioProfessor.html
+++ b/horarioProfessor.html
@@ -86,7 +86,7 @@
 
     <!-- EmailJS SDK -->
     <script type="text/JavaScript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-    <script type="module" src="acessarDB.js"></script>
+    <script type="module" src="js/acessarDB.js"></script>
     <script type="module" src="js/funprofessor.js"></script>
 </body>
 </html>
