--- a/horarioAluno.html
+++ b/horarioAluno.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Horário das Aulas</title>
     <!-- Funcionou desse jeito-->
-    <link rel="stylesheet" href="/styles/styaluno.css">
+    <link rel="stylesheet" href="styles/styaluno.css">
 </head>
 <body>
     <header>
@@ -41,6 +41,6 @@
         <p>&copy; 2024 Horário de Aulas</p>
     </footer>
 
-    <script type="module" src="/js/funaluno.js"></script>
+    <script type="module" src="js/funaluno.js"></script>
 </body>
 </html>
