--- a/horarioProfessor.html
+++ b/horarioProfessor.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Horários Escolares</title>
-    <link rel="stylesheet" href="/styles/styprofessor.css">
+    <link rel="stylesheet" href="styles/styprofessor.css">
     
 </head>
 <body>
