--- a/horarioAluno.html
+++ b/horarioAluno.html
@@ -30,11 +30,20 @@
                 </tbody>
             </table>
             <!-- Seção de legendas abaixo da tabela -->
-            <div class="legenda">
-                <div class="legenda-especial">Atividades Especiais</div>
-                <div class="legenda-prova">Provas</div>
-                <div class="legenda-normal">Aulas Normais</div>
-            </div>
+            <ul class="legenda">
+                <li class="legend-item">
+                    <div class="legend-color" style=" background-color: #b3e5cc;"></div>
+                    <span>Atividades Especiais</span>
+                </li>
+                <li class="legend-item">
+                    <div class="legend-color" style="background-color: #ffb3b3;"></div>
+                    <span>Prova</span>
+                </li>
+                <li class="legend-item">
+                    <div class="legend-color" style="background-color: #a3cde7;"></div>
+                    <span>Aulas Normais</span>
+                </li>
+            </ul>
         </div>
     </main>
     <footer>
